# PostArchiverViewer

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
bindings/: Author.ts  AuthorFullJson.ts  AuthorId.ts  AuthorJson.ts  AuthorPostsJson.ts  Comment.ts  ContentJson.ts  FileMeta.ts  FileMetaId.ts  FileMetaJson.ts  InfoJson.ts  Link.ts  PostJson.ts  PostMiniJson.ts  PostTagId.ts  PublicConfig.ts  SummaryAuthorJson.ts  SummaryJson.ts  Tag.ts  TagJson.ts
frontend/: .prettierignore  README.md  bun.lockb  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/public/: config.json
frontend/src/: App.vue  api.ts  category.ts  lazyload.ts  main.ts  types.ts  utils.ts
frontend/src/assets/: index.css
frontend/src/components/: AuthorAliases.vue  CategoryList.vue  DialogImage.vue  DoubleBadge.vue  PostList.vue  SearchInput.vue  ZipFileTreeItem.vue  ZipViewer.vue
frontend/src/components/author/: AuthorHeader.vue
frontend/src/components/dynamic-list/: DynamicList.vue  DynamicListControl.vue  utils.ts
frontend/src/components/image/: DynamicImage.vue  Image.vue  responsive-image.vue
frontend/src/components/post/: ArchiveBrowser.vue  PostAuthorBack.vue  PostComments.vue  PostContent.vue  PostFile.vue  PostHeader.vue  PostTags.vue  PostView.vue  utils.ts
frontend/src/components/post-list/: PostList.vue  PostListContent.vue  PostListControl.vue  PostListItem.vue  utils.ts
frontend/src/components/search/: PostSearch.vue  SearchButton.vue  SearchCombobox.vue  SearchHelp.vue  SearchInput.vue  SearchSelected.vue  search.ts  utils.ts
frontend/src/components/utils/: BackTo.vue  PageTitle.vue
frontend/src/pages/: About.vue  Author.vue  Category.vue  CategoryPosts.vue  Home.vue  Post.vue  Posts.vue  Random.vue  Search.vue
src/: config.rs  frontend.rs  images.rs  main.rs  resource.rs
src/api/: archive.rs  mod.rs  post.rs  posts.rs  relation.rs  search.rs  summary.rs  utils.rs
src/api/category/: author.rs  collection.rs  mod.rs  platform.rs  tag.rs
