[package]
name = "post-archiver-viewer"
version = "0.1.0"
edition = "2021"

[features]
default = []
full = ["full-text-search"]
full-text-search = [
    "dep:libsimple",
    "dep:tempfile",
]

[dependencies]
post-archiver = { version = "0.2.5", features = ["utils", "typescript"] }
axum = "0.8.1"
axum-reverse-proxy = "0.5.1"
mime_guess = "2.0.5"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "fs",
    "compression-br",
    "compression-gzip",
    "cors",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
image = "0.25.5"
fast_image_resize = { version = "5.1.1", features = ["image", "rayon"] }
axum-response-cache = "0.2.0"
path-clean = "1.0.1"
ts-rs = { version = "10.1.0" }
lru = { version = "0.13.0" }
dotenv = "0.15.0"
postcard = { version = "1.1.1", features = ["use-std"] }
axum-extra = { version = "0.10.0", features = ["query"] }
libsimple =  { version = "0.3", optional = true }
tempfile =  { version = "3.17.1", optional = true }
