[package]
name = "post-archiver-viewer"
version = "0.1.0"
edition = "2024"

[features]
default = []
full = ["full-text-search"]
full-text-search = [
    "dep:libsimple",
    "dep:tempfile",
]

[dependencies]
post-archiver = { version = "0.4.3", features = ["utils", "typescript"] }
axum = { version = "0.8.1", features = [ "macros" ] }
axum-reverse-proxy = "0.5.1"
mime_guess = "2.0.5"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
    "fs",
    "compression-br",
    "compression-gzip",
    "cors",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["time"] }
chrono = "0.4.39"
clap = { version = "4.5.26", features = ["derive", "env"] }
ts-rs = { version = "10.1.0" }
dotenv = "0.15.0"
axum-extra = { version = "0.10.0", features = ["query"] }
libsimple =  { version = "0.3", optional = true }
tempfile =  { version = "3.17.1", optional = true }
cached = "0.54.0"
local-ip-address = "0.6.3"
qrcode = { version = "0.14.1", default-features = false }
console = "0.15.11"
time = "0.3.41"
image-provider = "0.1.0"
zip = "2.2.2"
bytes = "1.9.0"
